# subleq

./: CMakeLists.txt  bf_to_core.py  bf_to_obf.py  c_sublec_exec.cpp  core_lang.py  immediate_core.py  obf_to_core.py  read_file.py  sasm.py  sbuild.py  secex.py  subleq.py
scripts/: mult_test.sams  test.s
scripts/hannoi/: hannoi.core
scripts/self_interpreter/: self_interpreter.bf
scripts/sub_interpreter/: int.im  mult.im
